ZCS-9979: Updated master/slave translations with primary/secondary respectively for all languages.

--- a/WebRoot/messages/ZaMsg_ca.properties
+++ b/WebRoot/messages/ZaMsg_ca.properties
@@ -1965,8 +1965,8 @@ aliasTargetTypeDL = Llista de distribuci\u00f3
 aliasTargetTypeResource = Recurs
 
 STANDALONE = Aut\u00f2nom
-MASTER = Mestre
-SLAVE = Subordinat
+MASTER = Primària
+SLAVE = Secundària
 Filter = Filtre
 SearchFilter_Aliases = \u00c0lies
 SearchFilter_Accounts = Comptes
