--- a/WebRoot/messages/ZaMsg_da.properties
+++ b/WebRoot/messages/ZaMsg_da.properties
@@ -1906,8 +1906,8 @@ aliasTargetTypeDL = Distributionsliste
 aliasTargetTypeResource = Ressource
 
 STANDALONE = Selvst\u00e6ndig
-MASTER = Master
-SLAVE = Slave
+MASTER = Prim\u00e6r
+SLAVE = Sekund\u00e6r
 Filter = Filter
 SearchFilter_Aliases = Aliasser
 SearchFilter_Accounts = Konti
