--- a/WebRoot/messages/ZaMsg_de.properties
+++ b/WebRoot/messages/ZaMsg_de.properties
@@ -1936,8 +1936,8 @@ aliasTargetTypeDL = Verteiler
 aliasTargetTypeResource = Ressource
 
 STANDALONE = Eigenst\u00e4ndig
-MASTER = Master
-SLAVE = Slave
+MASTER = Prim\u00e4r
+SLAVE = Sekund\u00e4r
 Filter = Filter
 SearchFilter_Aliases = Aliasnamen
 SearchFilter_Accounts = Accounts
