--- a/WebRoot/messages/ZaMsg_en_AU.properties
+++ b/WebRoot/messages/ZaMsg_en_AU.properties
@@ -1955,8 +1955,8 @@ aliasTargetTypeDL = Distribution List
 aliasTargetTypeResource = Resource
 
 STANDALONE = Standalone
-MASTER = Master
-SLAVE = Slave
+MASTER = Primary
+SLAVE = Secondary
 Filter = Filter
 SearchFilter_Aliases = Aliases
 SearchFilter_Accounts = Accounts
