--- a/WebRoot/messages/ZaMsg_es.properties
+++ b/WebRoot/messages/ZaMsg_es.properties
@@ -1945,8 +1945,8 @@ aliasTargetTypeDL = Lista de correo
 aliasTargetTypeResource = Recurso
 
 STANDALONE = Aut\u00f3nomo
-MASTER = Maestro
-SLAVE = Subordinado
+MASTER = Primaria
+SLAVE = Secundaria
 Filter = Filtro
 SearchFilter_Aliases = Alias
 SearchFilter_Accounts = Cuentas
