--- a/WebRoot/messages/ZaMsg_eu.properties
+++ b/WebRoot/messages/ZaMsg_eu.properties
@@ -1960,8 +1960,8 @@ aliasTargetTypeDL = Kontaktuen zerrenda
 aliasTargetTypeResource = Baliabidea
 
 STANDALONE = Autonomoa
-MASTER = Maisua
-SLAVE = Mendekoa
+MASTER = Lehen Hezkuntza
+SLAVE = Bigarren mailakoa
 Filter = Iragazkia
 SearchFilter_Aliases = Ezizenak
 SearchFilter_Accounts = Kontuak
