--- a/WebRoot/messages/ZaMsg_fr_CA.properties
+++ b/WebRoot/messages/ZaMsg_fr_CA.properties
@@ -1965,8 +1965,8 @@ aliasTargetTypeDL = Liste de distribution
 aliasTargetTypeResource = Ressource
 
 STANDALONE = Ind\u00e9pendant
-MASTER = Ma\u00eetre
-SLAVE = Esclave
+MASTER = Primaire
+SLAVE = Secondaire
 Filter = Filtre
 SearchFilter_Aliases = Alias
 SearchFilter_Accounts = Comptes
