--- a/WebRoot/messages/ZaMsg_hi.properties
+++ b/WebRoot/messages/ZaMsg_hi.properties
@@ -1906,8 +1906,8 @@ aliasTargetTypeDL = \u0935\u093f\u0924\u0930\u0923 \u0938\u0942\u091a\u0940
 aliasTargetTypeResource = \u0938\u0902\u0938\u093e\u0927\u0928
 
 STANDALONE = \u0938\u094d\u091f\u0948\u0902\u0921\u0905\u0932\u094b\u0928
-MASTER = \u092e\u093e\u0938\u094d\u200d\u091f\u0930
-SLAVE = \u0926\u093e\u0938
+MASTER = \u092e\u0941\u0916\u094d\u092f
+SLAVE = \u092e\u093e\u0927\u094d\u092f\u092e\u093f\u0915
 Filter = \u092b\u093c\u093f\u0932\u094d\u091f\u0930
 SearchFilter_Aliases = \u0909\u092a\u0928\u093e\u092e
 SearchFilter_Accounts = \u0905\u0915\u093e\u0909\u0902\u091f\u094d\u0938
