--- a/WebRoot/messages/ZaMsg_hu.properties
+++ b/WebRoot/messages/ZaMsg_hu.properties
@@ -1965,8 +1965,8 @@ aliasTargetTypeDL = Terjeszt\u00e9si lista
 aliasTargetTypeResource = Er\u0151forr\u00e1s
 
 STANDALONE = \u00d6n\u00e1ll\u00f3
-MASTER = Mester
-SLAVE = Szolga
+MASTER = Els\u0151dleges
+SLAVE = M\u00e1sodlagos
 Filter = Sz\u0171r\u0151
 SearchFilter_Aliases = Aliasok
 SearchFilter_Accounts = Fi\u00f3kok
