--- a/WebRoot/messages/ZaMsg_in.properties
+++ b/WebRoot/messages/ZaMsg_in.properties
@@ -1969,8 +1969,8 @@ aliasTargetTypeDL = Daftar Distribusi
 aliasTargetTypeResource = Sumber
 
 STANDALONE = Mandiri
-MASTER = Master
-SLAVE = Slave
+MASTER = Utama
+SLAVE = Sekunder
 Filter = Filter
 SearchFilter_Aliases = Alias
 SearchFilter_Accounts = Akun
