--- a/WebRoot/messages/ZaMsg_it.properties
+++ b/WebRoot/messages/ZaMsg_it.properties
@@ -1906,8 +1906,8 @@ aliasTargetTypeDL = Lista di distribuzione
 aliasTargetTypeResource = Risorsa
 
 STANDALONE = Autonomo
-MASTER = Master
-SLAVE = Slave
+MASTER = Primaria
+SLAVE = Secondario
 Filter = Filtro
 SearchFilter_Aliases = Alias
 SearchFilter_Accounts = Account
