--- a/WebRoot/messages/ZaMsg_ko.properties
+++ b/WebRoot/messages/ZaMsg_ko.properties
@@ -1914,8 +1914,8 @@ aliasTargetTypeDL = \uadf8\ub8f9
 aliasTargetTypeResource = \ub9ac\uc18c\uc2a4
 
 STANDALONE = \ub3c5\ub9bd \uc2e4\ud589\ud615
-MASTER = \ub9c8\uc2a4\ud130
-SLAVE = \uc2ac\ub808\uc774\ube0c
+MASTER = \uc77c \uc21c\uc704
+SLAVE = \uc911\uace0\ub4f1 \ud559\ub144
 Filter = \ud544\ud130
 SearchFilter_Aliases = \ubcc4\uce6d
 SearchFilter_Accounts = \uacc4\uc815
