--- a/WebRoot/messages/ZaMsg_lo.properties
+++ b/WebRoot/messages/ZaMsg_lo.properties
@@ -1965,8 +1965,8 @@ aliasTargetTypeDL = \u0ea5\u0eb2\u0e8d\u0e8a\u0eb7\u0ec8\u0e81\u0eb2\u0e99\u0e88
 aliasTargetTypeResource = \u0e8a\u0eb1\u0e9a\u0e9e\u0eb0\u0e8d\u0eb2\u0e81\u0ead\u0e99
 
 STANDALONE = \u0ea2\u0eb9\u0ec8\u200b\u0ec2\u0e94\u0e94\u0e94\u0ec8\u0ebd\u0ea7
-MASTER = \u200b\u0e95\u0ebb\u0ea7\u200b\u0e84\u0ea7\u0e9a\u200b\u0e84\u0eb8\u0ea1
-SLAVE = \u0e95\u0ebb\u0ea7\u200b\u0e96\u0eb7\u0e81\u200b\u0e84\u0ea7\u0e9a\u200b\u0e84\u0eb8\u0ea1
+MASTER = \u0e9b\u0eb0\u0e96\u0ebb\u0ea1
+SLAVE = \u0ea1\u0eb1\u0e94\u0e97\u0eb0\u0e8d\u0ebb\u0ea1
 Filter = \u0e95\u0ebb\u0ea7\u0e81\u0ead\u0e87
 SearchFilter_Aliases = \u0e8a\u0eb7\u0ec8\u0e88\u0eb3\u0ea5\u0ead\u0e87
 SearchFilter_Accounts = \u0e9a\u0eb1\u0e99\u0e8a\u0eb5
