--- a/WebRoot/messages/ZaMsg_ms.properties
+++ b/WebRoot/messages/ZaMsg_ms.properties
@@ -1965,8 +1965,8 @@ aliasTargetTypeDL = Senarai Edaran
 aliasTargetTypeResource = Sumber
 
 STANDALONE = Kendiri
-MASTER = Induk
-SLAVE = Hamba
+MASTER = Utama
+SLAVE = Sekunder
 Filter = Penapis
 SearchFilter_Aliases = Alias
 SearchFilter_Accounts = Akaun
