--- a/WebRoot/messages/ZaMsg_nl.properties
+++ b/WebRoot/messages/ZaMsg_nl.properties
@@ -1906,8 +1906,8 @@ aliasTargetTypeDL = Distributielijst
 aliasTargetTypeResource = Hulpbron
 
 STANDALONE = Zelfstandig
-MASTER = Master
-SLAVE = Slave
+MASTER = Primair
+SLAVE = Ondergeschikt
 Filter = Filter
 SearchFilter_Aliases = Aliassen
 SearchFilter_Accounts = Accounts
