--- a/WebRoot/messages/ZaMsg_no.properties
+++ b/WebRoot/messages/ZaMsg_no.properties
@@ -1969,8 +1969,8 @@ aliasTargetTypeDL = Distribusjonsliste
 aliasTargetTypeResource = Ressurs
 
 STANDALONE = Selvstendig
-MASTER = Mester
-SLAVE = Slave
+MASTER = Prim\u00e6r
+SLAVE = Sekund\u00e6r
 Filter = Filter
 SearchFilter_Aliases = Aliaser
 SearchFilter_Accounts = Kontoer
