--- a/WebRoot/messages/ZaMsg_pl.properties
+++ b/WebRoot/messages/ZaMsg_pl.properties
@@ -1956,8 +1956,8 @@ aliasTargetTypeDL = Lista wysy\u0142kowa
 aliasTargetTypeResource = Zas\u00f3b
 
 STANDALONE = Pojedynczy
-MASTER = G\u0142\u00f3wny
-SLAVE = Podrz\u0119dny
+MASTER = Podstawowy
+SLAVE = Wt\u00f3rny
 Filter = Filtr
 SearchFilter_Aliases = Aliasy
 SearchFilter_Accounts = Konta
