--- a/WebRoot/messages/ZaMsg_pt.properties
+++ b/WebRoot/messages/ZaMsg_pt.properties
@@ -1969,8 +1969,8 @@ aliasTargetTypeDL = Lista de distribui\u00e7\u00e3o
 aliasTargetTypeResource = Recurso
 
 STANDALONE = Independente
-MASTER = Principal
-SLAVE = Secund\u00e1rio
+MASTER = Prim\u00e1ria
+SLAVE = Secund\u00e1ria
 Filter = Filtro
 SearchFilter_Aliases = Nomes alternativos
 SearchFilter_Accounts = Contas
