--- a/WebRoot/messages/ZaMsg_ro.properties
+++ b/WebRoot/messages/ZaMsg_ro.properties
@@ -1965,8 +1965,8 @@ aliasTargetTypeDL = List\u0103 de distribu\u0163ie
 aliasTargetTypeResource = Resurs\u0103
 
 STANDALONE = Independent
-MASTER = Coordonator
-SLAVE = Subordonat
+MASTER = Primar
+SLAVE = Secundar
 Filter = Filtru
 SearchFilter_Aliases = Aliasuri
 SearchFilter_Accounts = Conturi
