--- a/WebRoot/messages/ZaMsg_sl.properties
+++ b/WebRoot/messages/ZaMsg_sl.properties
@@ -1965,8 +1965,8 @@ aliasTargetTypeDL = Distribucijski seznam
 aliasTargetTypeResource = Sredstvo
 
 STANDALONE = Samostojen
-MASTER = Nadrejeni
-SLAVE = Podrejeni
+MASTER = Primarno
+SLAVE = Sekundarni
 Filter = Filter
 SearchFilter_Aliases = Vzdevki
 SearchFilter_Accounts = Ra\u010duni
