--- a/WebRoot/messages/ZaMsg_sv.properties
+++ b/WebRoot/messages/ZaMsg_sv.properties
@@ -1906,8 +1906,8 @@ aliasTargetTypeDL = Distributionslista
 aliasTargetTypeResource = Resurs
 
 STANDALONE = Frist\u00e5ende
-MASTER = \u00d6verordnad
-SLAVE = Underordnad
+MASTER = Prim\u00e4r
+SLAVE = Sekund\u00e4r
 Filter = Filter
 SearchFilter_Aliases = Alias
 SearchFilter_Accounts = Konton
