--- a/WebRoot/messages/ZaMsg_tr.properties
+++ b/WebRoot/messages/ZaMsg_tr.properties
@@ -1963,8 +1963,8 @@ aliasTargetTypeDL = Da\u011f\u0131t\u0131m Listesi
 aliasTargetTypeResource = Kaynak
 
 STANDALONE = Tek ba\u015f\u0131na
-MASTER = Ana
-SLAVE = Ba\u011f\u0131ml\u0131
+MASTER = Birincil
+SLAVE = İkincil
 Filter = Filtre
 SearchFilter_Aliases = Takma Adlar
 SearchFilter_Accounts = Hesaplar
