--- a/WebRoot/messages/ZaMsg_vi.properties
+++ b/WebRoot/messages/ZaMsg_vi.properties
@@ -1969,8 +1969,8 @@ aliasTargetTypeDL = Danh s\u00e1ch g\u1eedi th\u01b0
 aliasTargetTypeResource = T\u00e0i nguy\u00ean
 
 STANDALONE = \u0110\u1ed9c l\u1eadp
-MASTER = Ch\u00ednh
-SLAVE = Ph\u1ee5
+MASTER = s\u01a1 c\u1ea5p
+SLAVE = Th\u1ee9 hai
 Filter = B\u1ed9 l\u1ecdc
 SearchFilter_Aliases = B\u00ed danh
 SearchFilter_Accounts = T\u00e0i kho\u1ea3n
