--- a/WebRoot/messages/ZaMsg_zh_CN.properties
+++ b/WebRoot/messages/ZaMsg_zh_CN.properties
@@ -1955,8 +1955,8 @@ aliasTargetTypeDL = \u901a\u8baf\u7ec4\u5217\u8868
 aliasTargetTypeResource = \u8d44\u6e90
 
 STANDALONE = \u72ec\u7acb
-MASTER = \u4e3b\u673a
-SLAVE = \u4ece\u673a
+MASTER = \u4e3b\u8981
+SLAVE = \u6b21\u8981\u7684
 Filter = \u8fc7\u6ee4\u5668
 SearchFilter_Aliases = \u522b\u540d
 SearchFilter_Accounts = \u8d26\u6237
