--- a/WebRoot/messages/ZaMsg_zh_HK.properties
+++ b/WebRoot/messages/ZaMsg_zh_HK.properties
@@ -1915,8 +1915,8 @@ aliasTargetTypeDL = \u5206\u767c\u6e05\u55ae
 aliasTargetTypeResource = \u8cc7\u6e90
 
 STANDALONE = \u7368\u7acb
-MASTER = \u4e3b
-SLAVE = \u5f9e
+MASTER = \u4e3b\u8981
+SLAVE = \u6b21\u8981\u7684
 Filter = \u904e\u6ffe\u5668
 SearchFilter_Aliases = \u5225\u540d
 SearchFilter_Accounts = \u5e33\u6236
