--- a/WebRoot/messages/ZaMsg_zh_TW.properties
+++ b/WebRoot/messages/ZaMsg_zh_TW.properties
@@ -1964,7 +1964,7 @@ aliasTargetTypeResource = \u8cc7\u6e90
 
 STANDALONE = \u7368\u7acb
 MASTER = \u4e3b\u8981
-SLAVE = \u5f9e\u5c6c
+SLAVE = \u6b21\u8981\u7684
 Filter = \u7be9\u9078\u689d\u4ef6
 SearchFilter_Aliases = \u5225\u540d
 SearchFilter_Accounts = \u5e33\u6236
