--- a/WebRoot/messages/ZaMsg_ar.properties
+++ b/WebRoot/messages/ZaMsg_ar.properties
@@ -1956,8 +1956,8 @@ aliasTargetTypeDL = \u0642\u0627\u0626\u0645\u0629 \u0627\u0644\u062a\u0648\u063
 aliasTargetTypeResource = \u0645\u0648\u0631\u062f
 
 STANDALONE = \u0645\u0633\u062a\u0642\u0644
-MASTER = \u0631\u0626\u064a\u0633\u064a
-SLAVE = \u062a\u0627\u0628\u0639
+MASTER = \u0627\u0628\u062a\u062f\u0627\u0626\u064a
+SLAVE = \u062b\u0627\u0646\u0648\u064a
 Filter = \u0645\u0631\u0634\u062d
 SearchFilter_Aliases = \u0627\u0644\u0623\u0633\u0645\u0627\u0621 \u0627\u0644\u0645\u0633\u062a\u0639\u0627\u0631\u0629
 SearchFilter_Accounts = \u0627\u0644\u062d\u0633\u0627\u0628\u0627\u062a
