--- a/WebRoot/messages/ZaMsg_iw.properties
+++ b/WebRoot/messages/ZaMsg_iw.properties
@@ -1965,8 +1965,8 @@ aliasTargetTypeDL = \u05e8\u05e9\u05d9\u05de\u05ea \u05ea\u05e4\u05d5\u05e6\u05d
 aliasTargetTypeResource = \u05de\u05e9\u05d0\u05d1
 
 STANDALONE = \u05e2\u05e6\u05de\u05d0\u05d9
-MASTER = \u05e8\u05d0\u05e9\u05d9
-SLAVE = \u05de\u05e9\u05e0\u05d9
+MASTER = \u05d9\u05b0\u05e1\u05d5\u05b9\u05d3\u05b4\u05d9
+SLAVE = \u05de\u05b4\u05e9\u05c1\u05e0\u05b4\u05d9
 Filter = \u05de\u05e1\u05e0\u05df
 SearchFilter_Aliases = \u05db\u05d9\u05e0\u05d5\u05d9\u05d9\u05dd
 SearchFilter_Accounts = \u05d7\u05e9\u05d1\u05d5\u05e0\u05d5\u05ea
