--- a/WebRoot/messages/ZaMsg_ja.properties
+++ b/WebRoot/messages/ZaMsg_ja.properties
@@ -1922,8 +1922,8 @@ aliasTargetTypeDL = \u914d\u5e03\u30ea\u30b9\u30c8
 aliasTargetTypeResource = \u30ea\u30bd\u30fc\u30b9
 
 STANDALONE = \u30b9\u30bf\u30f3\u30c9\u30a2\u30ed\u30f3
-MASTER = \u30de\u30b9\u30bf\u30fc
-SLAVE = \u30b9\u30ec\u30fc\u30d6
+MASTER = \u30d7\u30e9\u30a4\u30de\u30ea
+SLAVE = \u4e8c\u6b21
 Filter = \u30d5\u30a3\u30eb\u30bf\u30fc
 SearchFilter_Aliases = \u30a8\u30a4\u30ea\u30a2\u30b9
 SearchFilter_Accounts = \u30a2\u30ab\u30a6\u30f3\u30c8
