--- a/WebRoot/messages/ZaMsg_pt_BR.properties
+++ b/WebRoot/messages/ZaMsg_pt_BR.properties
@@ -1905,8 +1905,8 @@ aliasTargetTypeDL = Lista de distribui\u00e7\u00e3o
 aliasTargetTypeResource = Recurso
 
 STANDALONE = Independente
-MASTER = Master
-SLAVE = Slave
+MASTER = Prim\u00e1ria
+SLAVE = Secund\u00e1ria
 Filter = Filtro
 SearchFilter_Aliases = Nomes alternativos
 SearchFilter_Accounts = Contas
