--- a/WebRoot/messages/ZaMsg_ta.properties
+++ b/WebRoot/messages/ZaMsg_ta.properties
@@ -1969,8 +1969,8 @@ aliasTargetTypeDL = \u0bb5\u0bbf\u0ba8\u0bbf\u0baf\u0bcb\u0b95\u0baa\u0bcd \u0ba
 aliasTargetTypeResource = \u0bae\u0bc2\u0bb2\u0bae\u0bcd
 
 STANDALONE = \u0ba4\u0ba9\u0bbf\u0baa\u0bcd\u0baa\u0b9f\u0bcd\u0b9f\u0ba4\u0bc1
-MASTER = \u0bae\u0bbe\u0bb8\u0bcd\u0b9f\u0bb0\u0bcd
-SLAVE = \u0bb8\u0bcd\u0bb2\u0bc7\u0bb5\u0bcd
+MASTER = \u0bae\u0bc1\u0ba4\u0ba9\u0bcd\u0bae\u0bc8
+SLAVE = \u0b87\u0bb0\u0ba3\u0bcd\u0b9f\u0bbe\u0bae\u0bcd \u0ba8\u0bbf\u0bb2\u0bc8
 Filter = \u0bb5\u0b9f\u0bbf\u0b95\u0b9f\u0bcd\u0b9f\u0bc1
 SearchFilter_Aliases = \u0bae\u0bbe\u0bb1\u0bcd\u0bb1\u0bc1\u0baa\u0bcd\u0baa\u0bc6\u0baf\u0bb0\u0bcd\u0b95\u0bb3\u0bcd
 SearchFilter_Accounts = \u0b95\u0ba3\u0b95\u0bcd\u0b95\u0bc1\u0b95\u0bb3\u0bcd
